--- a/nvme-rhel-10.adoc
+++ b/nvme-rhel-10.adoc
@@ -2,9 +2,9 @@
 sidebar: sidebar
 permalink: nvme-rhel-10.html
 keywords: nvme, linux, rhel, red hat, enterprise
-summary: How to Configure NVMe-oF Host for RHEL 10 with ONTAP
+summary: How to Configure NVMe-oF Host for RHEL 10.0 with ONTAP
 ---
-= NVMe-oF host configuration for RHEL 10 with ONTAP
+= Configure RHEL 10.0 for NVMe-oF with ONTAP storage
 :hardbreaks:
 :toclevels: 1
 :nofooter:
@@ -21,12 +21,12 @@ You can use the following support and features with the NVMe-oF host configurati
 * Support available:
 ** Support for NVMe over TCP (NVMe/TCP) in addition to NVMe over Fibre Channel (NVMe/FC). The NetApp plug-in in the native `nvme-cli` package displays ONTAP details for both NVMe/FC and NVMe/TCP namespaces.
 ** Running both NVMe and SCSI traffic on the same host. For example, you can configure dm-multipath for SCSI mpath devices on SCSI LUNs and use NVMe multipath to configure NVMe-oF namespace devices on the host.
-** Beginning with ONTAP 9.12.1, support for secure in-band authentication is introduced for NVMe/TCP. You can use secure in-band authentication for NVMe/TCP with RHEL 10.
+** Beginning with ONTAP 9.12.1, support for secure in-band authentication is introduced for NVMe/TCP. You can use secure in-band authentication for NVMe/TCP with RHEL 10.0.
 
 +
 For additional details on supported configurations, see the link:https://mysupport.netapp.com/matrix/[Interoperability Matrix Tool^].
 * Features available:
-** Beginning with RHEL 10, native NVMe multipathing is always enabled, and DM multipath support for NVMe-oF is not supported.
+** Beginning with RHEL 10.0, native NVMe multipathing is always enabled, and DM multipath support for NVMe-oF is not supported.
 * Known limitations: 
 ** Avoid issuing the `nvme disconnect-all` command on systems booting from SAN over NVMe-TCP or NVMe-FC namespaces because it disconnects both root and data filesystems and might lead to system instability.
 
@@ -35,11 +35,11 @@ include::_include/nvme/enable-san-booting.adoc[]
 
 == Step 2: Validate software versions
 
-Use the following procedure to validate the minimum supported RHEL 10 software versions.
+Use the following procedure to validate the minimum supported RHEL 10.0 software versions.
 
 .Steps
 
-. Install RHEL 10 on the server. After the installation is complete, verify that you are running the specified RHEL 10 kernel: 
+. Install RHEL 10.0 on the server. After the installation is complete, verify that you are running the specified RHEL 10.0 kernel: 
 +
 [source,cli]
 ----
@@ -114,7 +114,7 @@ vs_ nvme_194_rhel10
 4 entries were displayed.
 ----
 ====
-+
+
 [NOTE]
 If the `hostnqn` strings do not match, use the `vserver modify` command to update the `hostnqn` string on your corresponding ONTAP array subsystem to match the `hostnqn` string from `/etc/nvme/hostnqn` on the host.
 
@@ -201,11 +201,14 @@ cat /sys/module/lpfc/parameters/lpfc_enable_fc4_type
 ----
 
 . Verify that you can view your initiator ports:
++
 [source,cli]
 ----
 cat /sys/class/fc_host/host*/port_name
 ----
++
 You should see output similar to:
++
 ----
 0x100000109b1c1205
 ----
@@ -303,7 +306,7 @@ include::_include/nvme/nvme-enabling-broadcom-1mb-size.adoc[]
 
 == Step 5: Verify NVMe boot services 
 
-With RHEL 10, the `nvmefc-boot-connections.service` and `nvmf-autoconnect.service` boot services included in the NVMe/FC `nvme-cli` package are automatically enabled when the system boots. 
+With RHEL 10.0, the `nvmefc-boot-connections.service` and `nvmf-autoconnect.service` boot services included in the NVMe/FC `nvme-cli` package are automatically enabled when the system boots. 
 
 After booting completes, verify that the `nvmefc-boot-connections.service` and `nvmf-autoconnect.service` boot services are enabled.
 
@@ -580,7 +583,7 @@ nvme netapp ontapdevices -o json
 
 == Step 8: Set up secure in-band authentication
 
-Beginning with ONTAP 9.12.1, secure in-band authentication is supported over NVMe/TCP between a RHEL 10 host and an ONTAP controller.
+Beginning with ONTAP 9.12.1, secure in-band authentication is supported over NVMe/TCP between a RHEL 10.0 host and an ONTAP controller.
 
 Each host or controller must be associated with a `DH-HMAC-CHAP` key to set up secure authentication. A `DH-HMAC-CHAP` key is a combination of the NQN of the NVMe host or controller and an authentication secret configured by the administrator. To authenticate its peer, an NVMe host or controller must recognize the key associated with the peer. 
 
@@ -599,7 +602,7 @@ Set up secure in-band authentication using the CLI.
 ----
 cat /etc/nvme/hostnqn
 ----
-. Generate the dhchap key for the RHEL 10 host.
+. Generate the dhchap key for the RHEL 10.0 host.
 +
 The following output describes the `gen-dhchap-key` command paramters:
 +
