--- a/nvme-rhel-8x.adoc
+++ b/nvme-rhel-8x.adoc
@@ -15,44 +15,7 @@ summary: How to Configure NVMe-oF Host for RHEL 8x with ONTAP
 [.lead]
 include::_include/nvme/nvme-introduction.adoc[]
 
-*About this task*
-
-The following ONTAP features are supported by ONTAP versions and SAN host operating systems: 
-
-[cols="40,30,30",options="header"]
-|===
-
-|ONTAP feature | Supported SAN hosts | ONTAP version
-
-|*NVMe/TCP in addition to NVMe/FC* 
-
-Provides ONTAP details for both NVMe/FC and NVMe/TCP namespaces using the native `nvme-cli` package.
-a| * RHEL 8.10, 8.9, 8.8, 8.7, 8.6, 8.5, 8.4, 8.8, 8.2 
-|Support begins with 9.10.1
-|*NVMe and SCSI traffic supported on the same host*
-
-Use dm-multipath for SCSI LUNs and NVMe multipath for NVMe-oF namespaces.
-a|* RHEL 8.10, 8.9, 8.8, 8.7, 8.6, 8.5, 8.4, 8.3, 8.2 
-|Support begins with 9.4 
-|===
-
-ONTAP supports the following SAN Host features regardless of the ONTAP version running on your system setup:
-
-[cols="50,50",options="header"]
-|===
-
-|ONTAP feature | Supported SAN hosts 
-|*`nvme-cli` package includes auto-connect scripts*
-
-You do not need third-party scripts.
-a|* RHEL 8.10, 8.9, 8.8, 8.7, 8.6, 8.5, 8.4, 8.3, 8.2 
-|*Native udev rule in `nvme-cli` package*
-
-Provides round-robin load balancing for NVMe multipath.
-a|* RHEL 8.10, 8.9, 8.8, 8.7, 8.6, 8.5, 8.4, 8.3, 8.2  
-|===
-
-NOTE: For details on supported configurations, see the link:https://mysupport.netapp.com/matrix/[Interoperability Matrix Tool^]. 
+Learn how to configure NVMe over Fabrics (NVMe-oF) hosts for RHEL 8x. For more support and feature information, see link:nvme-rhel-overview.adoc[RHEL ONTAP support and features^].
 
 NVMe-oF with RHEL 8x has the following known limitations:
 
