--- a/nvme-rhel-overview.adoc
+++ b/nvme-rhel-overview.adoc
@@ -38,7 +38,7 @@ a|8.2
  |9.4 
 |===
 
-ONTAP supports the following SAN Host features regardless of the ONTAP version running on your system setup:
+ONTAP supports the following SAN host features regardless of the ONTAP version running on your system setup:
 
 [cols="50,50",options="header"]
 |===
@@ -69,9 +69,9 @@ NOTE: For details on supported configurations, see the link:https://mysupport.ne
 
 |If your version is .. | Go to ..
 |10x
-|link:nvme-rhel-10x.adoc[Learn about configuring RHEL 10x^]
+|link:nvme-rhel-10x.html[Learn about configuring RHEL 10x^]
 |9x 
-|link:nvme-rhel-9x.adoc[Learn about configuring RHEL 9x^]
+|link:nvme-rhel-9x.html[Learn about configuring RHEL 9x^]
 |8x
-|link:nvme-rhel-8x.adoc[Learn about configuring RHEL 8x^]
+|link:nvme-rhel-8x.html[Learn about configuring RHEL 8x^]
 |===
